# GymJoCo

./: .gitignore  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt
examples/: blocksworld.py  groceries_example.py  pick_place_tables.py  rl_example.py  scripted_example.py
examples/agents/: __init__.py  scripted_agent.py
examples/utils/: callbacks.py  wrappers.py
gymjoco/: __init__.py  _version.py  env.py  milestones.py
gymjoco/assets/episodes/dummy_ballworld/: episode.yml
gymjoco/assets/episodes/dummy_brickworld/: episode.yml
gymjoco/assets/episodes/dummy_paddleworld/: episode.yml
gymjoco/assets/episodes/dummy_pickplace/: episode.yml
gymjoco/assets/episodes/dummy_pushworld/: episode.yml
gymjoco/assets/objects/bin_blue/: object.xml
gymjoco/assets/objects/bin_dark_wood/: object.xml
gymjoco/assets/objects/bin_green/: object.xml
gymjoco/assets/objects/bin_light_wood/: object.xml
gymjoco/assets/objects/bin_red/: object.xml
gymjoco/assets/objects/bin_yellow/: object.xml
gymjoco/assets/objects/bottle/: object.xml
gymjoco/assets/objects/bread/: object.xml
gymjoco/assets/objects/can/: object.xml
gymjoco/assets/objects/cereal/: object.xml
gymjoco/assets/robots/ur5e/: robot.xml
gymjoco/common/defs/: cfg_keys.py  types.py
gymjoco/episode/: cfg_parsing.py  samplers.py
gymjoco/episode/specs/: camera_spec.py  episode_spec.py  joint_spec.py  scene_spec.py
gymjoco/rendering/: offscreen_renderer.py
gymjoco/simulation/: mjcf_composer.py  robot_agent.py  simulator.py
gymjoco/tasks/rearrangement/: rearrangement_task.py
(+18 files in other folders)
